Excluded irrelevant directories from documentation generation. Excluded Latex as output.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,40 +312,33 @@ set(DOXYGEN_PROJECT_BRIEF "Open source software for viewing and converting align
 set(DOXYGEN_PROJECT_LOGO ${CMAKE_CURRENT_SOURCE_DIR}/Documentation/interface.png)
 set(DOXYGEN_CREATE_SUBDIRS YES)
 set(DOXYGEN_HAVE_DOT YES) # GraphViz Package for diagrams
-#set(DOXYGEN_INTERNAL_DOCS NO) # Comments intended for developers and not for users (*! \internal *)
-#set(DOXYGEN_CLASS_DIAGRAMS YES)
 
 # Configuration file generation using CMake. 
 set(DOXYFILE_CMAKE ${CMAKE_CURRENT_BINARY_DIR}/CMakeDoxyfile.in)
 set(DOXYFILE ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-#set(DOXYGEN_CPP_CLI_SUPPORT YES)
 
-# Specify input. Specify because complicated project and otherwise unübersichtlich. If not specified, current directory is searched. 
-# Try with core now, add other directories once documented etc. Multiple entries possible (use FILE_PATTERNS and EXCLUDE for this later).
+# Documentation settings.
 set(DOXYGEN_EXTRACT_ALL YES) # Set to yes if you want to extract all existing documentation  from project. Do this for now, once starting proper documentation change to NO. 
 set(DOXYGEN_RECURSIVE YES) #Search subdirectories for input files as well.
+set(DOXYGEN_INTERNAL_DOCS NO) # Comments intended for developers and not for users (*! \internal *)
+set(DOXYGEN_CLASS_DIAGRAMS YES)
 
 # Output (HTML/Latex/...) configuration options.
 set(DOXYGEN_GENERATE_HTML YES)
-set(DOXYGEN_GENERATE_LATEX YES)
+set(DOXYGEN_GENERATE_LATEX NO)
 set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Documentation/doxymentation)
 set(DOXYGEN_SEARCHENGINE YES)
 set(DOXYGEN_SOURCE_BROWSER YES)
 set(DOXYGEN_SUBGROUPING YES)
+set(DOXYGEN_EXCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/CurrentlyExcluded ${CMAKE_CURRENT_SOURCE_DIR}/Documentation ${CMAKE_CURRENT_SOURCE_DIR}/external ${CMAKE_CURRENT_SOURCE_DIR}/testdata ${CMAKE_CURRENT_SOURCE_DIR}/Tools ${CMAKE_CURRENT_SOURCE_DIR}/UnitTests)
 
 configure_file(${DOXYFILE_CMAKE} ${DOXYFILE} @ONLY)
 
-# Documentation for CORE only.
+# Documentation for entire OPEN INFRA PLATFORM project.
 doxygen_add_docs(GenerateDocumentation ALL
-${CMAKE_CURRENT_SOURCE_DIR}/Core/src/EXPRESS
-WORKING DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+${CMAKE_CURRENT_SOURCE_DIR} 	# Actual documented code here
+WORKING DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}	# Current root
 COMMENT "Generating doxymentation for TUM Open Infra Platform project.")
-
-#add_custom_target(GenerateDocumentation ALL
-#COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
-#WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} 
-#COMMENT "Generating doxymentation for TUM Open Infra Platform project." VERBATIM
-#)
 
 else()
 message("Doxygen not found. Please install doxygen using ${CMAKE_CURRENT_SOURCE_DIR}/external/Get_Doxygen.cmd to be able to generate documentation for the project. Please also install the GraphViz DOT package using ${CMAKE_CURRENT_SOURCE_DIR}/external/Get_Dot.cmd for rendering diagrams.")
