Set up OIP.UI as start-up project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -600,6 +600,10 @@ add_executable(OpenInfraPlatform.UI
 	#${OpenInfraPlatform_UserInterface_Data_Source}
 )
 
+# set up start-up project
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT OpenInfraPlatform.UI)
+
+
 #------------------------------------------------------------------------------
 # Link qt and other external libraries to our executable.
 #------------------------------------------------------------------------------
