--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -75,4 +75,4 @@ foreach(format ${IFC_FORMATS})
 	target_link_libraries(OpenInfraPlatform.Core PUBLIC OpenInfraPlatform.${format})
 endforeach()
 
-set_target_properties(OpenInfraPlatform.Core 	PROPERTIES FOLDER "OpenInfraPlatform")
+#set_target_properties(OpenInfraPlatform.Core 	PROPERTIES FOLDER "OpenInfraPlatform")
