Started fetch_content style integration of blueframework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,7 +166,7 @@ find_package(Boost 1.65.1 COMPONENTS signals system filesystem REQUIRED)
 #	add_compile_definitions(BOOST_VARIANT_DO_NOT_USE_VARIADIC_TEMPLATES)
 #endif()
 
-find_package(BlueFramework 3.1.1.94 COMPONENTS Core Engine Application ImageProcessing Rasterizer D3D11RenderSystem D3D12RenderSystem REQUIRED)
+#find_package(BlueFramework 3.1.1.94 COMPONENTS Core Engine Application ImageProcessing Rasterizer D3D11RenderSystem D3D12RenderSystem REQUIRED)
 
 # Deprecated as of Revision 530
 #find_package(OpenInfraPlatform.EarlyBinding REQUIRED)
@@ -300,6 +300,19 @@ else()
 message("DOXYGEN_GENERATE_DOCUMENTATION box not checked. Thus not generating doxygen documentation for TUM Open Infra Platform project. To generate doxygen documentation, check the box next to DOXYGEN_GENERATE_DOCUMENTATION.")
 endif(DOXYGEN_GENERATE_DOCUMENTATION)
 
+
+FetchContent_Declare(
+	blue_framework
+	GIT_REPOSITORY https://github.com/hechth/Blue-Framework.git
+	GIT_TAG alpha
+)
+  
+FetchContent_GetProperties(blue_framework)
+if(NOT blue_framework_POPULATED)
+	FetchContent_Populate(blue_framework)
+	add_subdirectory(${blue_framework_SOURCE_DIR} ${blue_framework_BINARY_DIR})
+endif()
+
 #------------------------------------------------------------------------------
 # Set required Qt plugins variables and find and add the corresponding dlls for deployment and copying.
 #------------------------------------------------------------------------------
@@ -390,7 +403,7 @@ include_directories(
 	${CMAKE_CURRENT_BINARY_DIR} # Qt generated files will be located here
 	# thirdpary libraries:
 	${Boost_INCLUDE_DIR}
-	${BLUEFRAMEWORK_INCLUDE_DIR}
+	${blue_framework_SOURCE_DIR}/include
 	${OpenInfraPlatform.EarlyBinding_INCLUDE_DIR}
 	${FFTW3_INCLUDE_DIRS}
 	${ZLIB_INCLUDE_DIRS}	
@@ -605,6 +618,7 @@ add_executable(OpenInfraPlatform.UI
 #------------------------------------------------------------------------------
 
 # Use the Widgets module from Qt 5.
+#find_package(BlueFramework 3.1.1.94 COMPONENTS Core Engine Application ImageProcessing Rasterizer D3D11RenderSystem D3D12RenderSystem REQUIRED)
 
 target_link_libraries( OpenInfraPlatform.UI
 	OpenInfraPlatform.Core
@@ -618,7 +632,13 @@ target_link_libraries( OpenInfraPlatform.UI
 	Qt5::Qml
 	Qt5::Location
 	Qt5::Positioning
-	${BLUEFRAMEWORK_LIBRARIES}
+	BlueFramework.Core
+	BlueFramework.Engine
+	BlueFramework.Application
+	BlueFramework.ImageProcessing
+	BlueFramework.Rasterizer
+	BlueFramework.D3D11RenderSystem
+	BlueFramework.D3D12RenderSystem
 	QtXlsxWriter
 	QSimpleUpdater
 	carve
@@ -650,7 +670,7 @@ endif()
 #------------------------------------------------------------------------------
 
 # BlueFramework Copy Binaries
-BLUEFRAMEWORK_COPY_BINARIES(${CMAKE_BINARY_DIR})
+#BLUEFRAMEWORK_COPY_BINARIES(${CMAKE_BINARY_DIR})
 
 # Oklabi Copy Binaries
 OKLABI_COPY_BINARIES(${CMAKE_BINARY_DIR})
@@ -792,7 +812,7 @@ add_thirdparty(test_carve_polyhedrons_2	"carve")
 #set_target_properties(ZLIBCopyBinaries							PROPERTIES FOLDER "Copy")
 set_target_properties(CopyOpenInfraPlatformUIResources 					PROPERTIES FOLDER "Copy")
 set_target_properties(OklabiCopyBinaries						PROPERTIES FOLDER "Copy")
-set_target_properties(BlueFrameworkCopyBinaries 					PROPERTIES FOLDER "Copy")
+#set_target_properties(BlueFrameworkCopyBinaries 					PROPERTIES FOLDER "Copy")
 #set_target_properties(Qt5CopyBinaries			 				PROPERTIES FOLDER "Copy")
 set_target_properties(QSimpleUpdaterCopyBinaries					PROPERTIES FOLDER "Copy")
 set_target_properties(OpenInfraPlatform.UI						PROPERTIES FOLDER "OpenInfraPlatform")
